--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   , "dependencies": {
       "express": "2.5.2"
     , "jade": ">= 0.0.1"
+    , "bcrypt": "0.5.0"
+    , "everyauth": "0.2.32"
+    , "mongodb" : "1.0.2"
   }
 }
